[metadata]
name = junit2influx
description = "Send junit data to influxdb"
version = 0.2.1
author = Eliot Berriot
author_email = eliot.berriot@people-doc.com
long_description = file: README.rst
license = MIT
keywords = code, monitoring, tests, database, xml
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = 
	influxdb
	click

[options.entry_points]
console_scripts = 
	junit2influx = junit2influx.cli:junit_push
	push2influx = junit2influx.cli:push

[options.extras_require]
dev = 
	pytest
	wheel
	zest.releaser[recommended]
	pyroma==2.0  # https://github.com/landscapeio/prospector/issues/229
test = 
	pytest
	pytest-cov
	pytest-mock
lint = 
	prospector[with_pyroma]

[options.packages.find]
exclude = 
	tests

[wheel]
universal = 1

[coverage:run]
source = junit2influx
omit = 
	junit2influx/_acceptance_test.py
branch = True

[zest.releaser]
create-wheel = yes

[tool:pytest]
testpaths = tests

[egg_info]
tag_build = 
tag_date = 0

